load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/golgoth31/sensit-callback
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "go_default_library",
    srcs = ["sensit-callback.go"],
    importpath = "github.com/golgoth31/sensit-callback",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//input/aws:go_default_library",
        "//output:go_default_library",
        "//payload:go_default_library",
        "@com_github_hashicorp_logutils//:go_default_library",
    ],
)

go_binary(
    name = "sensit-callback-bin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "sensit-callback-base",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "sensit-callback",
    files = [":sensit-callback-bin"],
    entrypoint = ["/sensit-callback-bin"],
    stamp = True,
)

container_image(
    name = "latest",
    files = [":sensit-callback-bin"],
    entrypoint = ["/sensit-callback-bin"],
    stamp = True,
)
