load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/golgoth31/sensit-callback/config",
    visibility = ["//visibility:public"],
    deps = [
        "//sensit-callback/sensitTypes:go_default_library",
        "//sensit-callback/vendor/github.com/spf13/viper:go_default_library",
    ],
)
