load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sensitPayload.go"],
    importpath = "github.com/golgoth31/sensit-callback/payload",
    visibility = ["//visibility:public"],
    deps = [
        "//sensit-callback/sensitTypes:go_default_library",
        "//sensit-callback/vendor/github.com/icza/bitio:go_default_library",
    ],
)
