load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sensitSQS.go"],
    importpath = "github.com/golgoth31/sensit-callback/input/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//sensit-callback/sensitTypes:go_default_library",
        "//sensit-callback/vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//sensit-callback/vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//sensit-callback/vendor/github.com/aws/aws-sdk-go/service/sqs:go_default_library",
    ],
)
