load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["influxdb.go"],
    importpath = "github.com/golgoth31/sensit-callback/output/influxdb",
    visibility = ["//visibility:public"],
    deps = [
        "//sensit-callback/config:go_default_library",
        "//sensit-callback/sensitTypes:go_default_library",
        "//sensit-callback/vendor/github.com/influxdata/influxdb/client/v2:go_default_library",
    ],
)
